--- a/views/ref/portal/inicio.twig
+++ b/views/ref/portal/inicio.twig
@@ -32,7 +32,7 @@
 				{% endif %}
 			</div>
 			<div class="col-xs-12 col-sm-5">
-				<img src="{{ baseUrl() }}/assets-ref/img/manos-fondo-transp.png" class="img-responsive" style="margin: auto; height:320px;" alt="">
+				<img src="{{ baseUrl() }}/assets-ref/img/manos-fondo-transp.png" class="img-responsive" style="margin: auto; max-height:320px;" alt="">
 			</div>
 		</div>
 	</div>
