Fix en una ruta de masonry

--- a/views/ref/contenido/derecho/ver.twig
+++ b/views/ref/contenido/derecho/ver.twig
@@ -194,7 +194,7 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 </form>
 {% endblock body %} {# -------------------------------------------- #} {% block scripts %}
 <script src="{{ baseUrl() }}/assets-ref/js/autosize.min.js"></script>
-<script src="{{ baseUrl() }}/assets-lpe/js/masonry.pkgd.min.js"></script>
+<script src="{{ baseUrl() }}/assets-ref/js/masonry.pkgd.min.js"></script>
 <script>
 	var countletter = 0;
 	$(document).ready(function() {
