--- a/views/ref/registro/registro.twig
+++ b/views/ref/registro/registro.twig
@@ -86,7 +86,7 @@
                             <div class="form-group">
                                 <label for="captchaGoogle" class="col-md-3 control-label"> </label>
                                 <div class="col-md-9">
-                                     <div class="captcha-cont g-recaptcha" data-sitekey="6LcF-CYTAAAAAOdQ_mLyGnTl6uqw1FGj7yrpfW_F"></div>
+                                     <div class="captcha-cont g-recaptcha" data-size="compact" data-sitekey="6LcF-CYTAAAAAOdQ_mLyGnTl6uqw1FGj7yrpfW_F"></div>
                                 </div>
                             </div>
                             <div class="form-group">
