--- a/views/ref/master.twig
+++ b/views/ref/master.twig
@@ -44,34 +44,58 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav navbar-right">
+								<li class="page-scroll">
+								<a href="http://basesparalareforma.digital/">Inicio</a>
+							</li>
+							<li class="page-scroll dropdown hidden-xs">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Otro links <span class="caret"></span></a>
+								<ul class="dropdown-menu">
 							<li class="page-scroll">
-								<a href="{{urlFor('shwIndex')}}">Ejes</a>
+								<a href="http://basesparalareforma.digital/antecedentes">Antecedentes</a>
+							</li>
+							<li class="page-scroll">
+								<a href="http://basesparalareforma.digital/necesidad-de-la-reforma/">Necesidad de la Reforma</a>
+							</li>
+							<li class="page-scroll">
+								<a href="http://basesparalareforma.digital/instancias-de-participacion/">Antecedentes</a>
+							</li>
+							<li class="page-scroll">
+								<a href="http://basesparalareforma.digital/documentacion/">Documentos</a>
+							</li>
+							<li class="page-scroll">
+								<a href="http://basesparalareforma.digital/novedades/">Novedades</a>
+							</li>
+								</ul>
+							</li>
+							<li class="page-scroll">
+								<a href="{{urlFor('shwIndex')}}" style="font-weight:700;">Ejes</a>
 							</li>
 							{% if user is not empty %}
+							{% if user and (user.es_moderador == 1) %}
 							<li class="page-scroll">
-								<a href="{{urlFor('shwUsuario', {'idUsu': user.id})}}"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-circle" style="width:21px;margin-right:5px">{{
+								<a href="{{urlFor('shwIndexAdmin')}}"  class="middlebtn" ><i class="fa fa-cog fa-lg fa-fw"></i> <span class="hidden-md hidden-sm hidden-lg">Ajustes</span></a>
+							</li>
+							{% endif %}
+							<li class="page-scroll">
+								<a href="{{urlFor('shwModifUsuario')}}" class="middlebtn" ><i class="fa fa-pencil fa-fw fa-lg"></i> <span class="hidden-md hidden-sm hidden-lg">Editar perfil</span></a>
+							</li>
+							<li class="page-scroll">
+								<a href="{{urlFor('shwUsuario', {'idUsu': user.id})}}" class="coloreado middlebtn" ><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-rounded" style="width:21px;margin-right:5px">{{
 									user.nombre }}
 								</a>
 							</li>
 							<li class="page-scroll">
-								<a href="{{urlFor('shwModifUsuario')}}"><i class="fa fa-pencil fa-fw fa-lg"></i> <span class="hidden-md hidden-lg">Editar perfil</span></a>
-							</li>
-							{% if user and (user.es_moderador == 1) %}
-							<li class="page-scroll">
-								<a href="{{urlFor('shwIndexAdmin')}}"><i class="fa fa-cog fa-lg fa-fw"></i> <span class="hidden-md hidden-lg">Ajustes</span></a>
-							</li>
-							{% endif %}
-							<li class="page-scroll">
-									<a href="javascript:void(0)" onclick="document.getElementById('form-salir').submit();"><i class="fa fa-sign-out fa-fw fa-lg"></i> <span class="hidden-md hidden-lg">Salir</span></a>
+									<a href="javascript:void(0)" onclick="document.getElementById('form-salir').submit();" class="coloreado salir"><span class="hidden-xs">&nbsp;&nbsp;</span><i class="fa fa-sign-out fa-fw fa-lg"></i><span class="hidden-xs">&nbsp;&nbsp;</span><span class="hidden-md hidden-sm hidden-lg">Salir</span></a>
 								<form id="form-salir" action="{{ urlFor('runLogout') }}" method="POST">
 								</form>
 							</li>
 							{% else %}
 							<li class="page-scroll">
-								<a href="{{urlFor('shwLogin')}}"><i class="fa fa-sign-in fa-fw"></i> Iniciar Sesión</a>
+								<a href="{{urlFor('shwLogin')}}" class="coloreado">&nbsp;&nbsp;<i class="fa fa-sign-in fa-fw"></i> Iniciar Sesión &nbsp;&nbsp;</a>
 							</li>
 							{% endif %}
 						</ul>
+						
 					</div>
 					<!-- /.navbar-collapse -->
 				</div>
@@ -85,8 +109,20 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 		<div class="push"></div>
 	</div>
 	<div class="footer">
-		<h1><a href="https://twitter.com/intent/tweet?hashtags=BasesparalaReforma%2C&amp;original_referer=http%3A%2F%2Fbasesparalareforma.digital%2Fantecedentes%2F&amp;ref_src=twsrc%5Etfw&amp;text=Yo%20participo%20de%20las%20%23BasesparalaReforma%2C%20una%20Constituci%C3%B3n%20para%20Santa%20Fe.%20Sumate%20en&amp;tw_p=tweetbutton&amp;url=http%3A%2F%2Fbasesparalareforma.digital"
-							target="_blank">#BasesparalaReforma</a></h1>
+		<div style="
+    height: 216px;
+    padding-top: 60px;
+">		
+		<h1><a href="https://twitter.com/intent/tweet?hashtags=BasesparalaReforma%2C&amp;original_referer=http%3A%2F%2Fbasesparalareforma.digital%2Fantecedentes%2F&amp;ref_src=twsrc%5Etfw&amp;text=Yo%20participo%20de%20las%20%23BasesparalaReforma%2C%20una%20Constituci%C3%B3n%20para%20Santa%20Fe.%20Sumate%20en&amp;tw_p=tweetbutton&amp;url=http%3A%2F%2Fbasesparalareforma.digital" target="_blank">#BasesparalaReforma</a></h1>
+			
+		</div>
+			<footer id="footer" class="fusion-footer-copyright-area fusion-footer-copyright-center" style="
+    background-color: #282a2b;
+    padding-top: 18px;
+    padding-bottom: 16px;
+    color: #8c8989;
+    border-top: 1px solid #4b4c4d;
+    "><div class="fusion-row"><div class="fusion-copyright-content"><div class="fusion-copyright-notice" style="padding-bottom: 0px;"><div><span class="hidden-xs hidden-sm">Desarrollado con Software Libre sobre </span><a href="https://es.wordpress.org/" target="_blank">WordPress 4.6.1</a> y <a href="http://virtuagora.org/" target="_blank">Virtuagora 1.0</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://github.com/virtuagora/virtuagora" target="_blank"><img style="max-width: 20px;" src="http://basesparalareforma.digital/wp-content/uploads/2016/12/github-logo.png"></a><span class="hidden-xs hidden-sm">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="hidden-lg hidden-md">&nbsp;&nbsp;&nbsp;&nbsp;</span><a href="/terminos-y-condiciones" target="_self">TÉRMINOS Y CONDICIONES</a></div></div><div class="fusion-social-links-footer" style="display: none;"></div></div></div></footer>				
 	</div>
 	{% if flash['success'] is defined %}
 	<div id="modal-success" class="modal fade " tabindex="-1" role="dialog">
