--- a/views/ref/portal/inicio.twig
+++ b/views/ref/portal/inicio.twig
@@ -16,7 +16,7 @@
 				<p>Todas las voces y todas las miradas serán escuchadas en este proceso -inédito en la provincia y en el país-, de modo
 					que la futura convención reformadora tenga la mayor legitimidad social posible.</p>
 				{% if user is not empty %}
-				<h3 class="bold"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-circle" style="margin-right:10px;">{{ user.nombre
+				<h3 class="bold"><img src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" class="img-thumbnail" style="margin-right:10px;">{{ user.nombre
 					}} {{ user.apellido }}</h3>
 				{% endif %}
 				<p>Te invitamos a dejar tus opiniones en los 8 ejes principales a contemplarse en el proceso de reforma:</p>
