--- a/views/ref/usuario/ver.twig
+++ b/views/ref/usuario/ver.twig
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-sm-6">
             <div class="text-center">
-                 <img src="{{ avatarUrl(usuario.img_tipo, usuario.img_hash, 160) }}" class="img-circle img-responsive" style="margin: 0 auto;"
+                 <img src="{{ avatarUrl(usuario.img_tipo, usuario.img_hash, 160) }}" class="img-thumbnail img-responsive" style="margin: 0 auto;"
                 data-toggle="tooltip" data-placement="bottom" data-original-title="Usuario1" alt="Avatar">
             <h2 class="black grande">{{ usuario.nombre }} {{ usuario.apellido }}</h2>
             <ul class="list-inline">
