--- a/views/ref/contenido/derecho/ver.twig
+++ b/views/ref/contenido/derecho/ver.twig
@@ -64,9 +64,9 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 				<div class="comentario-container">
 					<a href="{{urlFor('shwLogin')}}" class="pull-left">
 						 {% if user is not empty %}
-						<img alt="image" class="img-circle" src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}">
+						<img alt="image" class="img-rounded" src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}">
 						{% else %}
-						<img alt="image" class="img-circle" src="{{ baseUrl() }}/assets/img/anon64.jpg">
+						<img alt="image" class="img-rounded" src="{{ baseUrl() }}/assets/img/anon64.jpg">
 						{% endif %}
 					</a>
 					<div class="media-body">
@@ -105,10 +105,10 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 					<div class="grid-item">
 						<div class="comentario-container">
 							<a href="{{ urlFor('shwUsuario',{'idUsu': comentario.autor.id}) }}" class="pull-left">
-								<img alt="image" class="img-circle" src="{{ avatarUrl(comentario.autor.img_tipo, comentario.autor.img_hash, 32) }}">
+								<img alt="image" class="img-rounded" src="{{ avatarUrl(comentario.autor.img_tipo, comentario.autor.img_hash, 32) }}">
 							</a>
 							<div class="media-body ">
-								<strong>{{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong> hizo un comentario
+								<strong>{{ comentario.autor.es_moderador ? "<i class='fa fa-shield fa-fw'' title='Moderador'></i>" }} {{ comentario.autor.nombre }} {{ comentario.autor.apellido }}</strong> hizo un comentario
 								{% if user and (user.es_moderador) %}
 									<a href="javascript:eliminarComentario({{comentario.id}})" class="btn btn-xs btn-warning pull-right" style="margin-left:5px;" data-toggle="tooltip" data-placement="bottom" data-original-title="Eliminar" ><i class="fa fa-times"></i></a>
 									{% endif %}
@@ -134,10 +134,10 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 							<form class="form-horizontal" action="{{ urlFor('runComentar', {'tipoRaiz': 'comentario', 'idRaiz': comentario.id }) }}" method="POST">
 							<div id="respComentario-{{comentario.id}}" class="comentario-container" style="display:none;">
 								<a href="{{ urlFor('shwUsuario',{'idUsu': user.id}) }}" class="pull-left">
-									<img alt="image" class="img-circle" src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" style="width:20px;">
+									<img alt="image" class="img-rounded" src="{{ avatarUrl(user.img_tipo, user.img_hash, 32) }}" style="width:20px;">
 								</a>
 								<div class="media-body">
-										<strong>{{ user.nombre }} {{ user.apellido}}</strong><br>
+										<strong>{{ user.es_moderador ? "<i class='fa fa-shield fa-fw'' title='Moderador'></i>" }} {{ user.nombre }} {{ user.apellido}}</strong><br>
 										<small class="text-muted">en respuesta a {{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</small>
 										<textarea name="cuerpo" class="form-control respuesta" rows="1" style=""></textarea>
 										<div class="pull-right" style="margin-bottom:8px;">
@@ -150,7 +150,7 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
             {% for respuesta in comentario.respuestas %}
 							<div class="comentario-container" style="margin-bottom:10px;">
 								<a href="{{ urlFor('shwUsuario',{'idUsu': respuesta.autor.id}) }}" class="pull-left">
-									<img alt="image" class="img-circle" src="{{ avatarUrl(respuesta.autor.img_tipo, respuesta.autor.img_hash, 32) }}" style="width:20px;">
+									<img alt="image" class="img-rounded" src="{{ avatarUrl(respuesta.autor.img_tipo, respuesta.autor.img_hash, 32) }}" style="width:20px;">
 								</a>
 								<div class="media-body">
 										<div class="btn-group-vertical btn-group-xs pull-right" style="margin-left: 5px;">
@@ -166,7 +166,7 @@ Así, en el caso de la Constitución de Santa Fe, es la norma fundamental de la"
 									{% endif %}
 											</div>
 									
-										<strong>{{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</strong><i> <span class="respuesta">{{ respuesta.cuerpo|nl2br }}</span></i>
+										<strong>{{ respuesta.autor.es_moderador ? "<i class='fa fa-shield fa-fw'' title='Moderador'></i>" }} {{ respuesta.autor.nombre }} {{ respuesta.autor.apellido }}</strong><i> <span class="respuesta">{{ respuesta.cuerpo|nl2br }}</span></i>
 								</div>
 							</div>
 						{% endfor %}
